Fix styling on mobile

--- a/public/stylesheets/userDetail.css
+++ b/public/stylesheets/userDetail.css
@@ -38,7 +38,7 @@
 }
 
 .info-text {
-  margin-top: -16px;
+  margin-top: -12px;
   display: flex;
   flex-direction: column;
 }
