--- a/public/stylesheets/userList.css
+++ b/public/stylesheets/userList.css
@@ -24,3 +24,8 @@
   background: url('../images/Client\ Log\ In\ Photo-1.png'),
     var(--color-background);
 }
+
+.project-list-background::before {
+  background: url('../images/Client\ Log\ In\ Photo-1.png'),
+    var(--color-background);
+}
